Change certificate title

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img src="https://i.postimg.cc/QKs8CTGZ/images-(1).jpg" class="main-img">
             
             <div class="certificate">
-                <h3>📜 CERTIFICATE OF AWESOMENESS</h3>
+                <h3>📜 CERTIFICATE OF GROWING UP</h3>
                 <p>TO: ESKU<BR><BR>
 FROM: Your Favorite Person<BR><BR>
 RE: Annual Celebration of Your Existence<BR><BR>
